added view via auth

--- a/templates/admin.html
+++ b/templates/admin.html
@@ -12,6 +12,7 @@
         <p>
             <label for="type">type</label>
             <select list="type" name="type">
+                <option value="view">view</option>
                 <option value="build">build</option>
                 <option value="commit">commit</option>
   </datalist>
