--- a/templates/admin.html
+++ b/templates/admin.html
@@ -6,7 +6,7 @@
 </head>
 <body>
     {% if msg %}
-        {{ msg }}
+        {{ msg|safe }}
     {% endif %}
     <form action="" method="post">
         <p>
